--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap");
+
 html {
   box-sizing: border-box;
 }
@@ -5,4 +7,31 @@ html {
 body {
   margin: 0;
   min-height: 100vh;
+  font-family: "Rubik", sans-serif;
+  color: white;
+  background-color: black;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 5rem;
+  margin-bottom: 0;
+  font-size: 3rem;
+  letter-spacing: 5px;
+}
+
+.infinity {
+  display: flex;
+  justify-content: center;
+}
+
+.loading-spinner {
+  position: fixed;
+}
+
+.loading-spinner img {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
