--- a/style.css
+++ b/style.css
@@ -14,15 +14,84 @@ body {
 
 h1 {
   text-align: center;
-  margin-top: 5rem;
+  margin-top: 15rem;
   margin-bottom: 0;
-  font-size: 3rem;
+  font-size: 6rem;
   letter-spacing: 5px;
 }
 
 .infinity {
   display: flex;
   justify-content: center;
+}
+
+.arrows-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.arrows {
+  margin-top: 5%;
+  margin-left: 50%;
+  transform: translate(-50%);
+  display: block;
+  width: 60px;
+  height: 72px;
+}
+
+.arrows path {
+  stroke: white;
+  fill: transparent;
+  stroke-width: 1px;
+  animation: arrow 2s infinite;
+  -webkit-animation: arrow 2s infinite;
+}
+
+@keyframes arrow {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes arrow /*Safari and Chrome*/ {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.arrows path.a1 {
+  animation-delay: -1s;
+  -webkit-animation-delay: -1s; /* Safari 和 Chrome */
+}
+
+.arrows path.a2 {
+  animation-delay: -0.5s;
+  -webkit-animation-delay: -0.5s; /* Safari 和 Chrome */
+}
+
+.arrows path.a3 {
+  animation-delay: 0s;
+  -webkit-animation-delay: 0s; /* Safari 和 Chrome */
 }
 
 .loading-spinner {
@@ -34,4 +103,41 @@ h1 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.image-container {
+  margin-top: 10rem;
+  width: 100%;
+}
+
+.image-container img {
+  width: 50%;
+  margin-left: 25%;
+  margin-top: 5px;
+}
+
+@media (max-width: 1200px) {
+  .image-container img {
+    width: 70%;
+    margin-left: 15%;
+  }
+}
+
+@media (max-width: 1000px) {
+  .image-container img {
+    width: 80%;
+    margin-left: 10%;
+  }
+}
+
+@media (max-width: 768px) {
+  h1 {
+    margin-top: 10rem;
+    font-size: 4rem;
+    letter-spacing: 3px;
+  }
+  .image-container img {
+    width: 90%;
+    margin-left: 5%;
+  }
 }
